Submission draft upload

--- a/index.html
+++ b/index.html
@@ -4,19 +4,18 @@
 <!--UT Austin Bootcamp 
 Refactor Author: Abraham Spindel
 Refactor Date: 2020-7-23
-Last updated: 2020-7-23 
+Last updated: 2020-7-24 
 A component of Homework 1-->
 
 <!-- Declaration of character set, style sheet reference, and page title -->
 <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./assets/css/style.css">
     <title>Horiseon Services</title>
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
+<!-- Main body of page content -->
 <body>
-
-
     <!-- Page header containing in-page navigation and company name -->
     <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
@@ -41,17 +40,14 @@ A component of Homework 1-->
 
     <!-- Large image at top of page -->
     <img class="main-img" src="./assets/images/digital-marketing-meeting.jpg"
-        alt="Photo of a digital marketing meeting" />
+        alt="Digital-marketing-meeting.jpg" />
 
     <!-- Main anchors on page describing services rendered -->
     <main class="content">
-        <!-- Search Engine Optimization            Is it ok for these to be divs or is there a more appropriate semantic tag?-->
+        <!-- Search Engine Optimization-->
         <div id="search-engine-optimization">
             <img class="float-left" src="./assets/images/search-engine-optimization.jpg"
                 alt="search-engine-optimization.jpg" />
-
-            <!-- is it inappropriate for the alt text to simply be a descriptive-ish file name? -->
-
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they
@@ -72,7 +68,8 @@ A component of Homework 1-->
         </div>
         <!-- Social Media Marketing -->
         <div id="social-media-marketing">
-            <img class="float-left" src="./assets/images/social-media-marketing.jpg" alt="social-media-marketing.jpg" />
+            <img class="float-left" src="./assets/images/social-media-marketing.jpg" 
+            alt="social-media-marketing.jpg" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you
@@ -111,7 +108,7 @@ A component of Homework 1-->
         </div>
     </aside>
 
-    <!-- <div class="footer"> -->
+    <!-- Page footer containing credits and copyright -->
     <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
